--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,8 +9,10 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - research.qmd
-      - publications.qmd
+      - href: research.qmd
+        text: Research Interests
+      - href: publications.qmd
+        text: Publications
 
 format:
   html:
