--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,7 +10,7 @@ website:
       - href: index.qmd
         text: Home
       - href: research.qmd
-        text: Research Interests
+        text: Research Projects
       - href: publications.qmd
         text: Publications
 
@@ -19,6 +19,11 @@ format:
     theme: cosmo
     css: styles.css
     toc: true
+    include-in-header:
+      - text: |
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+          <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
 
 editor: visual
 
